some changes to erased and non erased arguments

--- a/parse-to-idris.cabal
+++ b/parse-to-idris.cabal
@@ -43,6 +43,8 @@ library
 executable parse-to-idris-exe
   main-is: Main.hs
   other-modules:
+      FirstTypes
+      SSA
       Paths_parse_to_idris
   autogen-modules:
       Paths_parse_to_idris
