--- a/quetzal.cabal
+++ b/quetzal.cabal
@@ -4,13 +4,13 @@ cabal-version: 2.2
 --
 -- see: https://github.com/sol/hpack
 
-name:           parse-to-idris
+name:           quetzal
 version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/parse-to-idris#readme>
-homepage:       https://github.com/githubuser/parse-to-idris#readme
-bug-reports:    https://github.com/githubuser/parse-to-idris/issues
-author:         Author name here
-maintainer:     example@example.com
+description:    Please see the README on GitHub at <https://github.com/bhaktishh/quetzal#readme>
+homepage:       https://github.com/bhaktishh/quetzal#readme
+bug-reports:    https://github.com/bhaktishh/quetzal/issues
+author:         Bhakti Shah
+maintainer:     bs266@st-andrews.ac.uk
 copyright:      2025 Author name here
 license:        BSD-3-Clause
 license-file:   LICENSE
@@ -21,15 +21,15 @@ extra-source-files:
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/parse-to-idris
+  location: https://github.com/bhaktishh/quetzal
 
 library
   exposed-modules:
       Lib
   other-modules:
-      Paths_parse_to_idris
+      Paths_quetzal
   autogen-modules:
-      Paths_parse_to_idris
+      Paths_quetzal
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wunused-top-binds -Wpartial-fields -Wredundant-constraints
@@ -46,9 +46,9 @@ executable parse-to-idris-exe
       FirstTypes
       SSA
       ToIdris
-      Paths_parse_to_idris
+      Paths_quetzal
   autogen-modules:
-      Paths_parse_to_idris
+      Paths_quetzal
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wunused-top-binds -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
@@ -56,17 +56,17 @@ executable parse-to-idris-exe
       base >=4.7 && <5
     , containers
     , megaparsec
-    , parse-to-idris
+    , quetzal
     , text
   default-language: Haskell2010
 
-test-suite parse-to-idris-test
+test-suite quetzal-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_parse_to_idris
+      Paths_quetzal
   autogen-modules:
-      Paths_parse_to_idris
+      Paths_quetzal
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wunused-top-binds -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
@@ -74,6 +74,6 @@ test-suite parse-to-idris-test
       base >=4.7 && <5
     , containers
     , megaparsec
-    , parse-to-idris
+    , quetzal
     , text
   default-language: Haskell2010
