--- a/quetzal.cabal
+++ b/quetzal.cabal
@@ -40,7 +40,7 @@ library
     , text
   default-language: Haskell2010
 
-executable parse-to-idris-exe
+executable quetzal-exe
   main-is: Main.hs
   other-modules:
       FirstTypes
