--- a/quetzal.cabal
+++ b/quetzal.cabal
@@ -37,6 +37,7 @@ library
       base >=4.7 && <5
     , containers
     , megaparsec
+    , mtl
     , text
   default-language: Haskell2010
 
@@ -57,6 +58,7 @@ executable quetzal-exe
       base >=4.7 && <5
     , containers
     , megaparsec
+    , mtl
     , quetzal
     , text
   default-language: Haskell2010
@@ -75,6 +77,7 @@ test-suite quetzal-test
       base >=4.7 && <5
     , containers
     , megaparsec
+    , mtl
     , quetzal
     , text
   default-language: Haskell2010
