some idxm progress

--- a/quetzal.cabal
+++ b/quetzal.cabal
@@ -32,6 +32,8 @@ library
       Paths_quetzal
   hs-source-dirs:
       src
+  default-extensions:
+      NamedFieldPuns
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wunused-top-binds -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
